traces/bug_598.txt
examples++-mpi/dSuperLU_DIST.cpp:740: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-mpi/dSuperLU_DIST.cpp:740:2: initialization of callDoLoadInit
738.   
739.   
740.    LOADFUNC(Load_Init)
        ^

examples++-mpi/dSuperLU_DIST.cpp:740:2: call to DoLoadInit
738.   
739.   
740.    LOADFUNC(Load_Init)
        ^

examples++-mpi/dSuperLU_DIST.cpp:740:2: call to addInitFunct
  738.   
  739.   
  740.    LOADFUNC(Load_Init)
          ^

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
